--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.90.16",
     "@types/puppeteer": "^5.4.7",
     "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.5.0",
     "date-fns": "^4.1.0",
     "electron-store": "^11.0.2",
